changed images from local references to web refs to imgur

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Pet Vacation Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -133,19 +133,21 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Pet Vacation Portal</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.ia/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Give your pet a stay-cation and keep in touch with them when you travel.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <!-- img class="img-polaroid" src="http://placehold.it/480x300" -->
+          <!-- img class="img-polaroid" src="http://imgur.com/EcRSTuO" -->
+<a href="http://imgur.com/EcRSTuO"><img src="http://i.imgur.com/EcRSTuO.jpg" title="Hosted by imgur.com"/></a>
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order and share buttons.-->
@@ -157,17 +159,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>1000</h3> <p>backers</p>
+                <h3>12</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>$300</h3> <p>of $50,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                  <h3>10</h3> <p>days left</p>
+                  <h3>90</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -198,23 +200,41 @@
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <!-- http://placehold.it -->
+
+      <div class="row-fluid section0">
+        <div class="span12">
+          <p>
+            Many pet owners are uncomfortable leaving their pets at kennels while away on travel.
+            Indeed, some pets are quite traumatized by these periods of perceived imprisonment and
+            abandonment.  Since pets are comfortable in the home, these periods of isolation from
+            their familiar human friends can be best managed through the use of visiting pet sitters.
+            The basic concern about using this type of service is the trustworthiness and reliability
+            of individual pet sitters.  Two initial feature sets of the Pet Vacation Portal will
+            enable pet owners to travel secure in the comfort that their pets are home, healthy and
+            reasonably happy.
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <!-- img class="img-polaroid" src="http://imgur.com/B7Xi44i" -->
+          <a href="http://imgur.com/B7Xi44i"><img src="http://i.imgur.com/B7Xi44i.jpg" title="Hosted by imgur.com"/></a>
         </div>
         <div class="span5 copy">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in arci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id.  Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            nutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            A Basic Pet Vacation Portal will provide pet owners with a big-browser web interface to a location-based
+            pet sitter search service.
+          <p>
+            <b>Basic Portal Features</b>
+            <br>
+            <ul> 
+              <li>View Yelp listings of local pet sitters complete with
+            customer ratings.</li>
+              <li>Search results crossed referenced with database of pet sitter certifications.</li>
+              <li>Reserve pet sitting services for selected 
+            travel dates.</li>
+              <li>Easily communicate with pet sitter during travel
+            for up-to-the-minute information.</li>
+              <li>Record ratings of pet sitter experience.</li>
+              <li>Revenue model - freemium via advertising.</li>
+            </ul>
           </p>
         </div>
       </div>
@@ -222,6 +242,23 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
+            A Premium Pet Vacation Portal will enable the pet owner to initiate live interaction
+            with their pets and the pet sitter, seeing and talking with them in the home.
+          <p>
+          <p>
+            <b>Premium Portal</b>
+            <br>
+            <ul> 
+              <li>Live video chat with pet and pet sitter.</li>
+              <li>Revenue model - subscription or on-demand pricing</li>
+              <li>$50 annual subscription</li>
+              <li>$1.50 for 10 second video chat</li>
+              <li>$5 for 1 minute video chat</li>
+              <li>$10 for 5 minute video chat</li>
+              <li>$17 for 10 minute video chat</li>
+            </ul>
+          </p>
+          <!-- br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
             porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
             mollis justo velit at nunc. Fusce nec egestas sem. Donec
@@ -232,14 +269,39 @@
             risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
             consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
             nutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            nunc. Fusce nec egestas sem. Donec fringilla. -->
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <!-- img class="img-polaroid" src="http://placehold.it/480x300" -->
+          <!-- img class="img-polaroid" src="http://imgur.com/MRPaKvB" -->
+          <a href="http://imgur.com/MRPaKvB"><img src="http://i.imgur.com/MRPaKvB.jpg" title="Hosted by imgur.com"/></a>
         </div>
       </div>
 
+      <div class="row-fluid section3">
+        <div class="span5 offset1 copy copy-right">
+            <b>Cost/Revenue Schedule</b>
+            <br>
+            <table border="1">
+              <tr>
+                <th>Product Phase</th>
+                <th>Production Cost</th>
+                <th>Revenue Per Cust</th>
+              </tr>
+              <tr>
+                <td>Basic Portal <br> (custs 1-250)</td>
+                <td>$100</td>
+                <td>$50</td>
+              </tr>
+              <tr>
+                <td>Premium Portal <br> (custs 251-500)</td>
+                <td>$100</td>
+                <td>$150</td>
+              </tr>
+            </table>
+        </div>
+      </div>
       <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
       <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
       <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
@@ -251,12 +313,12 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseOne">
-                    What does FAQ stand for?
+                    How is the Basic Portal funded?
                   </a>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Frequently Asked Question
+                    The Basic Portal is funded through pet product and travel advertising
                   </div>
                 </div>
               </div>
@@ -264,12 +326,12 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseTwo">
-                    What's a Frequently Asked Question?
+                    How are the pet sitter ratings determined?
                   </a>
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    A question which is commonly asked by users
+                    The pet sitter listings and ratings are sourced directly from Yelp reviews,
                   </div>
                 </div>
               </div>
